4. Thinking About State and Lifting State Up

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  /* overflsow: scroll; */
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -106,7 +106,7 @@ input {
 .list li {
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 1.5rem;
 }
 
 input[type="checkbox"] {
